--- a/ZadanieRekrutacyjneNetwiseAPI/ZadanieRekrutacyjneNetwiseAPI.csproj
+++ b/ZadanieRekrutacyjneNetwiseAPI/ZadanieRekrutacyjneNetwiseAPI.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 
 </Project>
